--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_800">#232F34</color>
+    <color name="blue_grey_700">#455A64</color>
     <color name="blue_grey_400">#78909C</color>
     <color name="orange_500">#F9AA33</color>
     <color name="mtrl_textinput_default_box_stroke_color">#F9AA33</color>
