adicionado a pesquisa de usuarios

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -65,7 +65,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email"
+            android:id="@+id/pesquisar"
             style="@style/signupstyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
