--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -73,7 +73,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
         app:endIconMode="custom"
-        app:endIconDrawable="@drawable/email_logo">
+        app:endIconDrawable="@drawable/pesquisa">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textPesquisarPrinc"
@@ -102,10 +102,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.89" />
+        app:layout_constraintGuide_percent="0.89056087" />
 
     <Button
-        android:id="@+id/configuracoes"
+        android:id="@+id/buttonConfiguracoesPrincipal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
