--- a/app/src/main/res/layout/activity_tela_ordem_servico.xml
+++ b/app/src/main/res/layout/activity_tela_ordem_servico.xml
@@ -91,9 +91,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/blue_grey_700"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="@+id/guideline21">
 
+
+
+        <Button
+            android:id="@+id/buttonOrdemServicoAddVoltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="Voltar" />
         <Button
             android:id="@+id/buttonOrdemServicoAdd"
             android:layout_width="wrap_content"
