Adicionado o DatePickerDialog na escolha da data

--- a/app/src/main/res/layout/activity_ordem_servico_modifica.xml
+++ b/app/src/main/res/layout/activity_ordem_servico_modifica.xml
@@ -105,6 +105,8 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/OrdemServicoAbertura"
             style="@style/signupstyle"
@@ -117,6 +119,9 @@
                 android:id="@+id/textOrdemServicoAbertura"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:clickable="false"
                 android:hint="Data de Abertura"
                 android:inputType="date" />
 
@@ -134,6 +139,9 @@
                 android:id="@+id/textOrdemServicoFinalizacao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:clickable="false"
                 android:hint="Data de Finalização"
                 android:inputType="date" />
 
