--- a/app/src/main/res/layout/activity_add_ordem_servico.xml
+++ b/app/src/main/res/layout/activity_add_ordem_servico.xml
@@ -114,6 +114,9 @@
                 android:id="@+id/textaddOrdemServicoAbertura"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="false"
+                android:cursorVisible="false"
                 android:hint="Data de Abertura"
                 android:inputType="date" />
 
@@ -131,6 +134,9 @@
                 android:id="@+id/textaddOrdemServicoFinalizacao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:clickable="false"
                 android:hint="Data de Finalização"
                 android:inputType="date"/>
 
