--- a/app/src/main/res/layout/activity_ordem_servico_modifica.xml
+++ b/app/src/main/res/layout/activity_ordem_servico_modifica.xml
@@ -151,7 +151,25 @@
         <Spinner
             android:id="@+id/spinnerOrdemServico"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/buttonOrdemServicoComentarios"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10sp"
+                android:text="Comentarios" />
+            <Button
+                android:id="@+id/buttonOrdemServicoAddComentario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Novo Comentario" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
